Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -218,9 +218,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "type": "scatter",
+         "uid": "0d0e24b6-f3c6-11e9-8eb5-a1fc78d08df7",
+         "x": [
+          "Buenos Aires",
+          "Toronto",
+          "Marakesh"
+         ],
+         "y": [
+          2891,
+          2732,
+          929
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"d958d42e-bb72-4152-8acf-9a2b11c0079f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"d958d42e-bb72-4152-8acf-9a2b11c0079f\", [{\"x\": [\"Buenos Aires\", \"Toronto\", \"Marakesh\"], \"y\": [2891, 2732, 929], \"type\": \"scatter\", \"uid\": \"0d2d8d4c-f3c6-11e9-8eb5-a1fc78d08df7\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"d958d42e-bb72-4152-8acf-9a2b11c0079f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"d958d42e-bb72-4152-8acf-9a2b11c0079f\", [{\"x\": [\"Buenos Aires\", \"Toronto\", \"Marakesh\"], \"y\": [2891, 2732, 929], \"type\": \"scatter\", \"uid\": \"0d2d8d4c-f3c6-11e9-8eb5-a1fc78d08df7\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "trace_first_three_pops = {'x': x_values, 'y': y_values}\n",
     "\n",
