--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -378,7 +378,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "area_values = list(cities[0:3]['Area'])\n",
+    "area_values = list(cities[0:3])\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': [], 'y': [], 'text': []}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': [], 'y': [], 'text': []}"
    ]
