--- a/index.ipynb
+++ b/index.ipynb
@@ -379,7 +379,7 @@
    "outputs": [],
    "source": [
     "area_values = list(cities[0:3]['Area'])\n",
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': area_values, 'text': }\n",
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': area_values, 'text': x_values}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': [], 'y': [], 'text': []}"
    ]
   },
