--- a/index.ipynb
+++ b/index.ipynb
@@ -379,8 +379,8 @@
    "outputs": [],
    "source": [
     "area_values = list(cities[0:3]['Area'])\n",
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': area_values, 'text': x_values}\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': [], 'y': [], 'text': []}"
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': area_values, 'text': text_values}\n",
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': [], 'text': []}"
    ]
   },
   {
