--- a/index.ipynb
+++ b/index.ipynb
@@ -380,7 +380,7 @@
    "source": [
     "area_values = list(cities[0:3]['Area'])\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': area_values, 'text': text_values}\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': [], 'text': []}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': , 'text': []}"
    ]
   },
   {
