--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -390,7 +390,7 @@
     }
    ],
    "source": [
-    "area_values = [cities[0]['Area'])\n",
+    "area_values = list(cities[0:3]['Area'])\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': area_values, 'text': text_values}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
    ]
