Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -374,32 +374,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-1ec4db939ae6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0marea_values\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcities\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Area'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mbar_trace_first_three_areas\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'type'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'bar'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'x'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx_values\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'y'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0marea_values\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'text'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtext_values\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mbar_trace_first_three_pops\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m'type'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'bar'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'x'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mx_values\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'y'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0my_values\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'text'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtext_values\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "area_values = [cities[0]['Area'], cities[1]['Area'], cities[0]['Area'])\n",
+    "area_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': area_values, 'text': text_values}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "text": [
+          "Buenos Aires",
+          "Toronto",
+          "Marakesh"
+         ],
+         "type": "bar",
+         "uid": "93bbecf8-f3c8-11e9-8eb5-a1fc78d08df7",
+         "x": [
+          "Buenos Aires",
+          "Toronto",
+          "Marakesh"
+         ],
+         "y": [
+          2891,
+          2732,
+          929
+         ]
+        },
+        {
+         "text": [
+          "Buenos Aires",
+          "Toronto",
+          "Marakesh"
+         ],
+         "type": "bar",
+         "uid": "93bbeef6-f3c8-11e9-8eb5-a1fc78d08df7",
+         "x": [
+          "Buenos Aires",
+          "Toronto",
+          "Marakesh"
+         ],
+         "y": [
+          203,
+          630,
+          230
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"e250c591-a02d-4572-bfc5-ca2bcefd8045\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"e250c591-a02d-4572-bfc5-ca2bcefd8045\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Marakesh\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Marakesh\"], \"y\": [2891, 2732, 929], \"type\": \"bar\", \"uid\": \"93c2069c-f3c8-11e9-8eb5-a1fc78d08df7\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Marakesh\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Marakesh\"], \"y\": [203, 630, 230], \"type\": \"bar\", \"uid\": \"93c2099e-f3c8-11e9-8eb5-a1fc78d08df7\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"e250c591-a02d-4572-bfc5-ca2bcefd8045\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"e250c591-a02d-4572-bfc5-ca2bcefd8045\", [{\"text\": [\"Buenos Aires\", \"Toronto\", \"Marakesh\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Marakesh\"], \"y\": [2891, 2732, 929], \"type\": \"bar\", \"uid\": \"93c2069c-f3c8-11e9-8eb5-a1fc78d08df7\"}, {\"text\": [\"Buenos Aires\", \"Toronto\", \"Marakesh\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Marakesh\"], \"y\": [203, 630, 230], \"type\": \"bar\", \"uid\": \"93c2099e-f3c8-11e9-8eb5-a1fc78d08df7\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plotly.offline.iplot([bar_trace_first_three_pops, bar_trace_first_three_areas])"
    ]
